--- a/rest-api-ecommerce.properties
+++ b/rest-api-ecommerce.properties
@@ -1,2 +1,17 @@
 server.port=8085
-spring.application.name=rest-api-ecommerce
+server.servlet.context-path=/
+
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MariaDB53Dialect
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/rest_ecommerce?createDatabaseIfNotExist=true&allowPublicKeyRetrieval=true&useSSL=false&useUnicode=true&characterEncoding=UTF-8&serverTimezone=Europe/Moscow&zeroDateTimeBehavior=convertToNull
+spring.datasource.username=user
+spring.datasource.password=password
+
+spring.jackson.serialization.indent_output=true
+
