Добавил имя приложения.

--- a/rest-api-ecommerce.properties
+++ b/rest-api-ecommerce.properties
@@ -1,5 +1,6 @@
 server.port=8080
 server.servlet.context-path=/
+spring.application.name=rest-api-ecommerce
 
 spring.jpa.generate-ddl=true
 spring.jpa.show-sql=true
