--- a/registry-server.properties
+++ b/registry-server.properties
@@ -1,7 +1,7 @@
-spring.application.name=registry-server
-server.port=9002
+server.port = 9002
+spring.application.name = registry-server
 
-eureka.instance.hostname=http://localhost
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
-eureka.client.service-url.defaultZone=http://localhost:9002/eureka/
+eureka.instance.hostname              = http://localhost
+eureka.client.register-with-eureka    = false
+eureka.client.fetch-registry          = false
+eureka.client.service-url.defaultZone = http://localhost:9002/eureka/
