Использование прокси для нескольких маг.

--- a/gateway-service.properties
+++ b/gateway-service.properties
@@ -1,4 +1,17 @@
 server.port = 8080
-spring.application.name = gateway-service
-zuul.routes.rest-api-ecommerce.path = /shop/**
-zuul.routes.rest-api-ecommerce-v-001.path = /shop/**
+#spring.application.name = gateway-service
+#zuul.routes.rest-api-ecommerce.path = /shop/**
+#zuul.routes.rest-api-ecommerce-v-001.path = /shop/**
+
+zuul.routes.echo.path         = /shop/**
+zuul.routes.echo.service-id   = myshops
+zuul.routes.echo.strip-prefix = true
+
+hystrix.command.myshops.execution.isolation.thread.timeoutInMilliseconds=5000
+
+myshops.ribbon.NIWSServerListClassName = com.netflix.loadbalancer.ConfigurationBasedServerList
+myshops.ribbon.listOfServers = http://localhost:8085,http://localhost:8086
+myshops.ribbon.ConnectTimeout = 1000
+myshops.ribbon.ReadTimeout = 3000
+myshops.ribbon.MaxTotalHttpConnections = 500
+myshops.ribbon.MaxConnectionsPerHost = 100
