--- a/gateway-service.properties
+++ b/gateway-service.properties
@@ -1,5 +1,5 @@
 server.port = 8080
-#spring.application.name = gateway-service
+spring.application.name = gateway-service
 #zuul.routes.rest-api-ecommerce.path = /shop/**
 #zuul.routes.rest-api-ecommerce-v-001.path = /shop/**
 
