--- a/gateway-service.properties
+++ b/gateway-service.properties
@@ -3,18 +3,19 @@ spring.application.name     = gateway-service
 management.security.enabled = false
 #security.ignored            = /**
 #security.basic.enable       = false
-#zuul.routes.rest-api-ecommerce.path = /shop/**
+#zuul.routes.rest-api-ecommerce.path       = /shop/**
 #zuul.routes.rest-api-ecommerce-v-001.path = /shop/**
 
 zuul.routes.echo.path         = /shop/**
 zuul.routes.echo.service-id   = myshops
 zuul.routes.echo.strip-prefix = true
+zuul.routes.myshops.sensitiveHeaders = Cookie, Set-Cookie
 
 hystrix.command.myshops.execution.isolation.thread.timeoutInMilliseconds=8000
 
 myshops.ribbon.NIWSServerListClassName = com.netflix.loadbalancer.ConfigurationBasedServerList
-myshops.ribbon.listOfServers = http://localhost:8085,http://localhost:8086
-myshops.ribbon.ConnectTimeout = 1000
-myshops.ribbon.ReadTimeout = 3000
+myshops.ribbon.listOfServers           = http://localhost:8085,http://localhost:8086
+myshops.ribbon.ConnectTimeout          = 1000
+myshops.ribbon.ReadTimeout             = 3000
 myshops.ribbon.MaxTotalHttpConnections = 500
-myshops.ribbon.MaxConnectionsPerHost = 100
+myshops.ribbon.MaxConnectionsPerHost   = 100
