--- a/gateway-service.properties
+++ b/gateway-service.properties
@@ -1,6 +1,6 @@
 server.port = 8080
 spring.application.name     = gateway-service
-management.security.enabled = false
+#management.security.enabled = false
 #security.ignored            = /**
 #security.basic.enable       = false
 #zuul.routes.rest-api-ecommerce.path       = /shop/**
