--- a/gateway-service.properties
+++ b/gateway-service.properties
@@ -9,8 +9,7 @@ spring.application.name     = gateway-service
 zuul.routes.echo.path         = /shop/**
 zuul.routes.echo.service-id   = myshops
 zuul.routes.echo.strip-prefix = true
-#zuul.routes.myshops.sensitiveHeaders = Cookie, Set-Cookie
-zuul.sensitive-headers=Cookie,Set-Cookie
+zuul.sensitive-headers        = Cookie,Set-Cookie
 
 hystrix.command.myshops.execution.isolation.thread.timeoutInMilliseconds=8000
 
