Переименовал app.name для ясности структуры серв-в

--- a/rest-api-ecommerce-v-002.properties
+++ b/rest-api-ecommerce-v-002.properties
@@ -1,6 +1,6 @@
 server.port                 = 8085
 server.servlet.context-path = /
-spring.application.name     = rest-api-ecommerce
+spring.application.name     = rest-api-ecommerce-v-002
 
 spring.jpa.generate-ddl                 = true
 spring.jpa.show-sql                     = true
